test/float_rational_math_family.rb.expected
1
2
-3
4
3
1
[0.5, 4]
[0.5, 0]
[-0.75, 4]
[0.5, 1]
0.5
3.0
0.25
TypeError: can't convert String into Float
